--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -379,7 +379,7 @@ EDIT DOWN THE FOLLOWING
 
 
 <!--
-Te to find patterns and to duplicate them in different situations.
+Toby to find patterns and to duplicate them in different situations.
  2019-05-08-te - With prompting from parent the child is able to recognise, duplicate and alter the update code for accepting left and right key input to change character x-axis velocity. After update and test iterations they change this to up and down key input to update y-axis velocity. The 3M approach lends itself well to exploring pattern recognition as patterns are readily available to participants in starting code and the extra patches that are added. -->
 <!--
  Also the knowledge of the GDP helps ability to recognise patterns in the code. Left / right -> Up / Down -->
@@ -432,7 +432,7 @@ A transition note here. this section explores data on the use of GDP from the pe
 <!--
 NOTE THIS HAS BEEN REMOVED
 ## The use of GDPs examined from an interpersonal focus
-This section examines the use of GDPs to facilitate guided participation via interpersonal interactions in game making. Guided participation in this context involved, guidance on organising design activities, various forms of problem solving and help to shift design perspectives. While the primary source of material is from pair interactions between children and parents, at times peer interaction between non-pairs developed into guidance. For example, in the in the example above where Te provides assistance for Ch1 in adding levels to his game
+This section examines the use of GDPs to facilitate guided participation via interpersonal interactions in game making. Guided participation in this context involved, guidance on organising design activities, various forms of problem solving and help to shift design perspectives. While the primary source of material is from pair interactions between children and parents, at times peer interaction between non-pairs developed into guidance. For example, in the in the example above where Toby provides assistance for Ch1 in adding levels to his game
 . -->
 
 
@@ -453,7 +453,7 @@ However, to overcome scarcity of facilitator support, direct help processes were
 
 <!-- #### Use of simple code examples which demonstrate the pattern in isolation -->
 <!--NOTE DEVELOP THIS EXAMPLE - RELATE TO PRACTICE OF CODE PATCHING (EXPLORED IN PREVIOUS CHAPTER) -->
-<!-- Code examples were initially the starting resource. The idea being it was quick to see the behaviour in context. The, use of code examples by Te in 2019-05-08 shows the effectiveness of the use of code examples by participants.  -->
+<!-- Code examples were initially the starting resource. The idea being it was quick to see the behaviour in context. The, use of code examples by Toby in 2019-05-08 shows the effectiveness of the use of code examples by participants.  -->
 
 
 <!-- The timings of the process of patching the code show that the learner is hesitant in the process. He checks the code and then checks the game output to test that the code creates the desired behaviour. Once this is verified he progresses to copy and paste the code from the create function of the sample code to the create function of his own source code. -->
@@ -473,7 +473,7 @@ This section prioritises describing the code patching process using examples and
 
 **GDPs are used in a variety of ways to guide the ideation process via restriction of choice in pattern collection, starting template includes core dynamics, visual code structures of GDPs suit rapid prototyping.**
 
-The design chapter explored the tension between reduced choice of genre of game. In my journal notes and observations of the games created, I note that the provision of a graphical menu of GDPs significantly decreased in time spend in ideation phase by providing scaffolding and a restriction of choice. Analysis of participant use of the menu as detailed in the documentation section above Te supports this analysis. Other techniques that leveraged the characteristics of game design patterns to support the ideation process emerged in community design activities.
+The design chapter explored the tension between reduced choice of genre of game. In my journal notes and observations of the games created, I note that the provision of a graphical menu of GDPs significantly decreased in time spend in ideation phase by providing scaffolding and a restriction of choice. Analysis of participant use of the menu as detailed in the documentation section above Toby supports this analysis. Other techniques that leveraged the characteristics of game design patterns to support the ideation process emerged in community design activities.
 
 <!-- The reduction on the length of the course was welcome show by Ma's comment. "It did go on for too long." -->
 
@@ -516,20 +516,20 @@ Later in the interaction, the parent outlines a different use of prototyping, th
 
     Mark:   Yeah. I think it's really important. I think the pencil and pen thing just didn't work did it. We sketched... It's got its place. But it's, the kids weren't that interested in using the graph paper to block out Piskel. It didn't translate. It was just easier to block it out straight in software. -->
 
-Another pair's ideation helped by the use of a GDPs is the following example which shows Te and Da are creating a new tilemap for a maze game. Te is able to map existing knowledge of tools and home knowledge of the kid of game he is imagining to rapidly make revisions.
+Another pair's ideation helped by the use of a GDPs is the following example which shows Toby and Dave  are creating a new tilemap for a maze game. Toby is able to map existing knowledge of tools and home knowledge of the kid of game he is imagining to rapidly make revisions.
 
-    Te: Oo. Shall we try to make it (unintelligible). Cos in pac man you can go off the edge.
-    Da: and you wrap round the other way?
-    Da: Yeah, yeah. We can do that. Save that for version 1.1
-    Te continues making changes to the code design.
-    Da: What’s the theme? What are you drawing?
-    Te: What? I’m trying to make like a pac-man type thing.
-    Da: Alright. What if you sketched it on paper first? Or have you got it in your head?
-    Te: I’m just kinda going for it it. (laughs)
-    Da: Ok go for it, see what you get up to.
-    Te: I’ll leave a hole there.
+    Toby: Oo. Shall we try to make it (unintelligible). Cos in pac man you can go off the edge.
+    Dave: and you wrap round the other way?
+    Dave: Yeah, yeah. We can do that. Save that for version 1.1
+    Toby continues making changes to the code design.
+    Dave: What’s the theme? What are you drawing?
+    Toby: What? I’m trying to make like a pac-man type thing.
+    Dave: Alright. What if you sketched it on paper first? Or have you got it in your head?
+    Toby: I’m just kinda going for it it. (laughs)
+    Dave: Ok go for it, see what you get up to.
+    Toby: I’ll leave a hole there.
 
-As aligned with the learning design principle of rapid feedback, changes in the code which Te is altering to impact on the new design pattern of a top down game, are immediately apparent in the preview window. As such, Te does not feel the need to prototype on paper.
+As aligned with the learning design principle of rapid feedback, changes in the code which Toby is altering to impact on the new design pattern of a top down game, are immediately apparent in the preview window. As such, Toby does not feel the need to prototype on paper.
 
 **Other examples of GPDs helping the ideation process**
 
@@ -584,10 +584,10 @@ GDP are already being used as a way to set goals, track progress and prioritise 
 
 
 <!--
-We can compare this drawn out process with a more rapid prioritisation guided by a parent with more experience in software development. Te and Da are discussing possible features early in the process if ideation.
+We can compare this drawn out process with a more rapid prioritisation guided by a parent with more experience in software development. Toby and Dave  are discussing possible features early in the process if ideation.
 
 They thinking of a feature – wrap around like Pac-man
-Da – Yeah we can do that. Save that for version 1.1
+Dave  – Yeah we can do that. Save that for version 1.1
 -->
 
 <!-- This pattern completion is mirrored in the work of other pairs. Thus replicating is a kind of participation in an emerging community.
@@ -880,11 +880,11 @@ Code patching is a processes which is suggested by the UMC process, not explicit
  Glitch errors can be productive.
 
  **Productive in exploring code / creating new game opportunites**
- An interesting one where the x / y axis mix up for Te 2019-03-18 leads to a new challenge in the game.
+ An interesting one where the x / y axis mix up for Toby 2019-03-18 leads to a new challenge in the game.
 
  **Productive in in**
 
- - Glitch - 2019-05-08 - Te and Da  - create moving enemy but it totally leaves the screen. This caused amusement and participants knew how they thought they would follow that up.
+ - Glitch - 2019-05-08 - Toby and Dave   - create moving enemy but it totally leaves the screen. This caused amusement and participants knew how they thought they would follow that up.
 
   The game making style of some participants -- for the most part young people -- seemed particularly likely to induce glitches and their unintended effects in game play. As a facilitator I began to celebrate these glitches with participants and explore with them the opportunities they provided to understand the related code in a way that was often concrete, engaging and and playful. -->
 
@@ -902,10 +902,6 @@ The experience of debugging appears to be a particular practice evoking certain 
 <!-- While the use of debugging tools and processes are often introduced to solve a particular problem in implementing one GDP. The same process is uses to solve issues that crop up while implementing other patterns. Throughout the recordings, some individuals show an evolution of problem solving knowledge and processes in relation to coding through their independent work.
 CAN i FIND ANY KEY EXAMPLES OF THIS?
 -->
-
-
-
-
 
 <!--
 
@@ -1030,23 +1026,23 @@ NOTE CAN THIS FOCUS ON NON TEMPLATED GDPs?
 For example, the work of the child to add 21 levels to their own game served as a way to publicise this possibility. The process was also spread by that child's willingness to help others to add that feature to their game. This shifted dependence on myself as a facilitator, or on the instruction-based support documents. This excerpt shows this more experience child coder Te, agreeing to show another child Ch1 how to add new levels.
 
     Ch1: Why’s that enemy in every level
-    Te: He’s not.
+    Toby: He’s not.
     Ch1: Can you show me how you add more levels on to yours?
-    Te: Yeah sure.
+    Toby: Yeah sure.
     Pause
-    Te: I’m just going to have one go of beating this (refering to his own game which he is playtesing). It’s 21 levels in it. So .. Yeeeeah.
+    Toby: I’m just going to have one go of beating this (refering to his own game which he is playtesing). It’s 21 levels in it. So .. Yeeeeah.
     Pause
     Ch1: It’s like parcours in Minecraft but times. It’s like playing the game Wipeout. Have you ever played Wipeout?
-    Te: Er not really.
+    Toby: Er not really.
     Ch1: Or seen it?
     Ch1: That’s like my second level.
-    Te: Ah so hard (Te fails at a high level on his game and starts to move off)
-    Te: (To someone else  calling for attention)  No I’m helping (Ch)..
-    _(Te then follows Ch to his workstation to help him implement more levels.)_
+    Toby: Ah so hard (Tobyfails at a high level on his game and starts to move off)
+    Toby: (To someone else  calling for attention)  No I’m helping (Ch)..
+    _(Tobythen follows Ch to his workstation to help him implement more levels.)_
 
-When Te moves to Ch's game he playtests it and then looks at the code. He notes that Ch has added a variable for a fourth level but then goes on to demonstrate to to add an array representing the next level, and a conditional statement to select level 4 when level 3 is completed. At Te uses the keyboard completes this work, Ch reads aloud the code which is being typed in by Te.
+When Tobymoves to Ch's game he playtests it and then looks at the code. He notes that Ch has added a variable for a fourth level but then goes on to demonstrate to to add an array representing the next level, and a conditional statement to select level 4 when level 3 is completed. At Toby uses the keyboard completes this work, Ch reads aloud the code which is being typed in by Te.
 
-Exchanges like this allow the propagation of GDPs. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is very likely that Ch has noticed Te helping others add levels to their games and thus this may help him to feel empowered to do the same. The propagation here is emerges from and is completed entirely through peer activity. A different and more common pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
+Exchanges like this allow the propagation of GDPs. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is very likely that Ch has noticed Toby helping others add levels to their games and thus this may help him to feel empowered to do the same. The propagation here is emerges from and is completed entirely through peer activity. A different and more common pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
 
 **New GDPs emerged from existing patterns through peer activity during playtesting**
 
@@ -1070,10 +1066,10 @@ While Ed has only just been introduced to the ability to "cramp". He is happy an
 
 **GDPs allow participants to share and explore their home and professional funds of knowledge and practices in the emerging learning community.**
 
-In the previous chapter, the ability for participants to bring home funds of knowledge into the emerging learning community was explored via the use of graphical assets and game narratives. In the previous example we can see a similar process occur as Te self test his game exposes the dominant game experience of timed jumping.
+In the previous chapter, the ability for participants to bring home funds of knowledge into the emerging learning community was explored via the use of graphical assets and game narratives. In the previous example we can see a similar process occur as Toby self test his game exposes the dominant game experience of timed jumping.
 
     Ch: It’s like parcours in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?
-    Te: Er not really.
+    Toby: Er not really.
     Ch: Or seen it?
 
 Parcour in Minecraft and Wipe out are both  game experiences whose main mechanic is about judging jumps to landing accurately. Ch makes links to his existing experience of games making comparisons between Te's game, commercial games and his own. In doing so Ch is able to show his knowledge and analysis of gameplay patterns to this community. While his motivation is not clear, one interpretation is that Ch could be making this contribution not only to openly share experience but also as a offering in return for his request for help which he has just made.
@@ -1090,9 +1086,9 @@ ADD IF RELEVANT - research on funds of knowledge motives or benefits of this beh
 
 - CONSIDER REVISING A LOT - AND LINK THIS TO THE EXTRACT ABOUT - EXTERNAL DOCUMENTATION WHICH FOLLOWS ON.
 
-In the following example home funds of knowledge are utilised not only in terms of home experiences of games but also in terms of design and problem solving practices. Da and Te are working closely as a pair.
+In the following example home funds of knowledge are utilised not only in terms of home experiences of games but also in terms of design and problem solving practices. Dave  and Toby are working closely as a pair.
 
-Da invites thinking outside of the constraints of the suggested design early in this first session. The following interaction shows a rich interchange where the parent is trying to draw on the game playing experiences to promote innovation in the design of the existing template.
+Dave  invites thinking outside of the constraints of the suggested design early in this first session. The following interaction shows a rich interchange where the parent is trying to draw on the game playing experiences to promote innovation in the design of the existing template.
 
 <!--
 The following exchange shows how the use of GDPs help participants navigate the professional practice of forking a codebase and the exploration of developer resources. Technically, he has the courage to divert from the existing game paradigm from platform to maze. Practically it brings up issues as many of the dominant game design patterns are different. Thus the first one they identify that of enemy following is not present in the current menu of choices.
@@ -1100,40 +1096,40 @@ The following exchange shows how the use of GDPs help participants navigate the 
 
 THIS IS STRONGLY LINKED WITH IDEATION - PERHAPS MOVE THERE.
 
-    Da: Have you thought about pushing it a bit further and have a different style of game?
-    Te: What do you mean?
-    Da: Well the previous style of game was a platform (makes shape with hands) game wasn’t it? You went along and there was gravity pushing down (points down). There are other types of games aren’t there?
-    Te: Pause. I don’t know what to do thought.
-    Da: Well quite but what other games are there? again
+    Dave: Have you thought about pushing it a bit further and have a different style of game?
+    Toby: What do you mean?
+    Dave: Well the previous style of game was a platform (makes shape with hands) game wasn’t it? You went along and there was gravity pushing down (points down). There are other types of games aren’t there?
+    Toby: Pause. I don’t know what to do thought.
+    Dave: Well quite but what other games are there? again
 
-Te adopts with this suggestion readily once he understands Da's suggestion. He then approaches Mick with a suggestion.
+Toby adopts with this suggestion readily once he understands Da's suggestion. He then approaches Mick with a suggestion.
 
-    Te: You could have a game where every 15 seconds 10 seconds you could add and enemy to such and such a random number between such and such (holds up hands to indicate parameters). You could block it somewhere.
-    Da: So instead of.. instead of the world… the world being sideways. We could have the world being looked down on. (reindicates the change of perspective)
-    Te: Hmm. How should I do this then?
-    Da: That’s a good question. Shall we ask Mick to see if that would mess things up or not?
-    Te: Mick
+    Toby: You could have a game where every 15 seconds 10 seconds you could add and enemy to such and such a random number between such and such (holds up hands to indicate parameters). You could block it somewhere.
+    Dave: So instead of.. instead of the world… the world being sideways. We could have the world being looked down on. (reindicates the change of perspective)
+    Toby: Hmm. How should I do this then?
+    Dave: That’s a good question. Shall we ask Mick to see if that would mess things up or not?
+    Toby: Mick
     Mick: Hi ya.
-    Te: Erm. Thinking about what game to do . I was thinking can we make like a Pac-man game kind of thing (indicates movement of character with hands)
-    Da: If we had an on the top game rather than a platform game
+    Toby: Erm. Thinking about what game to do . I was thinking can we make like a Pac-man game kind of thing (indicates movement of character with hands)
+    Dave: If we had an on the top game rather than a platform game
     Mick: I think it could work. You could kind of adapt that game by, kind of, removing gravity.
-    Da: and see what happens?
+    Dave: and see what happens?
     Mick: and see what happens.
 
 
 LOA FROM COMPUTING PEDAGOGY RELEVANT HERE - WHERE ELSE ARE THEY EXPLORED?
 
-Da expresses his desire to for the pair to try something new by implementing a pattern not in the menu of GDPs provided. Their new choice is a change of perspective which involves a new game pattern of a new movement game mechanic. The specific proposal is to remove a jumping game mechanic and using a 2D top down movement mechanic used in maze and adventure games (e.g. Pac-man and Zelda games).
+Dave  expresses his desire to for the pair to try something new by implementing a pattern not in the menu of GDPs provided. Their new choice is a change of perspective which involves a new game pattern of a new movement game mechanic. The specific proposal is to remove a jumping game mechanic and using a 2D top down movement mechanic used in maze and adventure games (e.g. Pac-man and Zelda games).
 
-Toby takes on the role of checking these change of direction with me. He uses a concrete example of a game to indicate the shift of genre and games space structure implied, saying "I was thinking can we make like a pacman game kind of thing". Da is more explicit naming the shift of perspective and genre. Mick takes this to a concrete code level by making reference to a key change of code that would be involved.
+Toby takes on the role of checking these change of direction with me. He uses a concrete example of a game to indicate the shift of genre and games space structure implied, saying "I was thinking can we make like a pacman game kind of thing". Dave  is more explicit naming the shift of perspective and genre. Mick takes this to a concrete code level by making reference to a key change of code that would be involved.
 
-The decision to divert from the existing meny of GDPs and genre can be triangulated with interview data from Da on the motivation behind his involvement in volunteering at Coder Dojos.
+The decision to divert from the existing meny of GDPs and genre can be triangulated with interview data from Dave  on the motivation behind his involvement in volunteering at Coder Dojos.
 
 PERHAPS DROP THIS QUOTE OR WORK OUT HOW TO BETTER INTEGRATE IT?
 
     Honestly, it's just it's just my hobby and I love it is the main reason. In fact, it's probably the only reason. If I can, if I can persuade / cajole / trick my kids into being involved at the same time, then that's even better. Personally, I think that's about it. I've always been interested in computers. I love, I love, I love programming. I'm no good at pencils and pens drawing or anything like that. But writing software is the closest I get to a creative outlet. So I just love doing that.
 
-Given this additional perspective, I interpret Da's influence to divert as a way of embracing a creative challenge and bringing his child along for the ride. However, Da is also aware of potential challenges of straying too far from the template. He does not want to "mess things up".
+Given this additional perspective, I interpret Da's influence to divert as a way of embracing a creative challenge and bringing his child along for the ride. However, Dave  is also aware of potential challenges of straying too far from the template. He does not want to "mess things up".
 
 A BIT ON FORKING ISSUES - TO EXPLORE LATER MOVE BELOW TO DISCUSSION?
 
