--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -43,11 +43,10 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
         -   [Use of evolving GDP terminology to facilitate design
             practices
             -](#use-of-evolving-gdp-terminology-to-facilitate-design-practices--)
-    -   [GDPs used to nurture tactical responses to errors and
-        blockages](#gdps-used-to-nurture-tactical-responses-to-errors-and-blockages)
-        -   [Use of GDPs to support debugging and the product revision
-            process - EDIT DOWN AND MerGE WITH
-            ABOVE](#use-of-gdps-to-support-debugging-and-the-product-revision-process---edit-down-and-merge-with-above)
+    -   [Use of GDPs to support debugging and the product revision
+        process](#use-of-gdps-to-support-debugging-and-the-product-revision-process)
+        -   [GDPs used to nurture tactical responses to errors and
+            blockages](#gdps-used-to-nurture-tactical-responses-to-errors-and-blockages)
 -   [Cultural Dimension](#cultural-dimension)
     -   [GDPs can encourage learners to design for others - ALSO LINKED
         TO IDEATION? - is this guided
@@ -71,7 +70,6 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
     -   [Discussion on the use of design patterns and pattern
         catalogues - MERGE WITH THE SECTION
         ABOVE](#discussion-on-the-use-of-design-patterns-and-pattern-catalogues---merge-with-the-section-above)
-
 
 ## Research Questions - June  2023
 
