--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -758,37 +758,20 @@ her role in the community can be explored here. -->
 
 
 
-#### Other examples of GDP driving adoption of technical processes
 
-References to such emerging practices driven by GDPs were present in many exchanges during directed playtesting and pair interactions. For example, after Ed gave feedback on the jump speed Mi's game, he continued by sharing a process to redundant space at the edges of design sprite characters.
+### Use of GDPs to support debugging and the product revision process
 
-While this  is also a secondary example - more on digital design being driven by key features- it does intersect with the concepts of GDPs as they are used here to explain a technical concepts with a concrete example of experience.
+_NOTE - This section is particularly underdeveloped at this stage_
 
+Many participants spent significant periods of time improving, testing and fixing coding errors in their games. Analysis of the coding of video data showed that revision and debugging was often a solo effort. In a way that mirrors the spread of other creative technical processes, certain revision and debugging practices that were transmitted through interaction with the facilitator that were adopted and used by the community. Some practices were straight-forward, for example the swift navigation between the source code window and a preview window of the live game. Others were more specialist like the use of the developer console of the internet browser to debug JavaScript errors or the process of hovering over red dots in the code playground to explore error messages.
 
-NOTE - COVERT TO TABLE -
+<!-- PERHAPS PULL UP DETAILS OF DEBUGGING. -->
 
-    Ed: for people with background like yours You can use the cramping tool.
-    Ed leads Molly to his workstation and involves his father in the process.
-    ...
-    Mark: In Piskel. You can crop it to the sprite  - cause it take that area too. (gestures – draws a large square with hands – then gestures to the edges). You approach an enemy if you’re close to it, it’ll trigger it.
-    Molly: ‘cause, sometimes you think how am I just sitting on this ledge here?
-    Mark: And you’re floating?
-    Molly: Yeah. Yeah that’s what’s happening. So..
-    Mark: So you can put you’re sprite back in again and you can crop it down.
+The experience of debugging appears to be a particular practice evoking certain feelings. Feelings of frustration alternate with elation at solving a tricky bug. As I built proficiency as a facilitator I began to identify different kinds of errors emerging as explored in the previous chapter. The use of code patching often provoked glitch bugs which where actually behaviour did not match intended behaviour. In analysis of interactions with participants when trying to solve coding blockages, I note different strategies in responding to such errors. For some participants I quickly solve them with short explanation to allow them to continue. For other participants who I judge to be receptive I may celebrate the glitch and explore with them the opportunities they provided to understand the related code in a way that allowed the exploration of more abstract concepts using a concrete example afforded by the mechanics of the game design pattern. The following section provides an example of this kind of interaction and examines the surfacing of computational thinking concepts in particular.
 
-<!-- Mark: Show what? What are we doing?
-Ed: On this one it’s like this.
-Molly: Oh that’s good how did you do that?
-Ed: The cramping tool. (laughs nervously)
-Mark: The what?
-Ed: What… Is it cramping? (gestures with hands as scrunching / clutching motion)
-Mark: For doing what? What did we do? I don’t know what we’ve done.
-Ed: People have used the whole block.
-Mark: Oh yeah. We’ve just cropped it. So it’s got no border around it. So you don’t set things off when you get really close to them.
-Molly: Aaaah. I see yes. Cos the corners actually could have. (makes a small square gesture with fingers)
- -->
-
-There are many other examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
+<!-- While the use of debugging tools and processes are often introduced to solve a particular problem in implementing one GDP. The same process is uses to solve issues that crop up while implementing other patterns. Throughout the recordings, some individuals show an evolution of problem solving knowledge and processes in relation to coding through their independent work.
+CAN i FIND ANY KEY EXAMPLES OF THIS?
+-->
 
 
 #### Use of evolving GDP terminology to facilitate design practices -
@@ -824,19 +807,47 @@ The mother develops her proficiency of expressing GDP related concepts and langu
 
 
 
-### Use of GDPs to support debugging and the product revision process
 
-_NOTE - This section is particularly underdeveloped at this stage_
 
-Many participants spent significant periods of time improving, testing and fixing coding errors in their games. Analysis of the coding of video data showed that revision and debugging was often a solo effort. In a way that mirrors the spread of other creative technical processes, certain revision and debugging practices that were transmitted through interaction with the facilitator that were adopted and used by the community. Some practices were straight-forward, for example the swift navigation between the source code window and a preview window of the live game. Others were more specialist like the use of the developer console of the internet browser to debug JavaScript errors or the process of hovering over red dots in the code playground to explore error messages.
+### Other examples of GDP driving adoption of technical processes
 
-<!-- PERHAPS PULL UP DETAILS OF DEBUGGING. -->
+References to such emerging practices driven by GDPs were present in many exchanges during directed playtesting and pair interactions. For example, after Ed gave feedback on the jump speed Mi's game, he continued by sharing a process to redundant space at the edges of design sprite characters.
 
-The experience of debugging appears to be a particular practice evoking certain feelings. Feelings of frustration alternate with elation at solving a tricky bug. As I built proficiency as a facilitator I began to identify different kinds of errors emerging as explored in the previous chapter. The use of code patching often provoked glitch bugs which where actually behaviour did not match intended behaviour. In analysis of interactions with participants when trying to solve coding blockages, I note different strategies in responding to such errors. For some participants I quickly solve them with short explanation to allow them to continue. For other participants who I judge to be receptive I may celebrate the glitch and explore with them the opportunities they provided to understand the related code in a way that allowed the exploration of more abstract concepts using a concrete example afforded by the mechanics of the game design pattern. The following section provides an example of this kind of interaction and examines the surfacing of computational thinking concepts in particular.
+While this  is also a secondary example - more on digital design being driven by key features- it does intersect with the concepts of GDPs as they are used here to explain a technical concepts with a concrete example of experience.
 
-<!-- While the use of debugging tools and processes are often introduced to solve a particular problem in implementing one GDP. The same process is uses to solve issues that crop up while implementing other patterns. Throughout the recordings, some individuals show an evolution of problem solving knowledge and processes in relation to coding through their independent work.
-CAN i FIND ANY KEY EXAMPLES OF THIS?
--->
+
+NOTE - COVERT TO TABLE -
+
+    Ed: for people with background like yours You can use the cramping tool.
+    Ed leads Molly to his workstation and involves his father in the process.
+    ...
+    Mark: In Piskel. You can crop it to the sprite  - cause it take that area too. (gestures – draws a large square with hands – then gestures to the edges). You approach an enemy if you’re close to it, it’ll trigger it.
+    Molly: ‘cause, sometimes you think how am I just sitting on this ledge here?
+    Mark: And you’re floating?
+    Molly: Yeah. Yeah that’s what’s happening. So..
+    Mark: So you can put you’re sprite back in again and you can crop it down.
+
+<!-- Mark: Show what? What are we doing?
+Ed: On this one it’s like this.
+Molly: Oh that’s good how did you do that?
+Ed: The cramping tool. (laughs nervously)
+Mark: The what?
+Ed: What… Is it cramping? (gestures with hands as scrunching / clutching motion)
+Mark: For doing what? What did we do? I don’t know what we’ve done.
+Ed: People have used the whole block.
+Mark: Oh yeah. We’ve just cropped it. So it’s got no border around it. So you don’t set things off when you get really close to them.
+Molly: Aaaah. I see yes. Cos the corners actually could have. (makes a small square gesture with fingers)
+ -->
+
+There are many other examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
+
+
+#### Code Patching as a guided process
+
+While the process of copying and pasting fixes into on-going projects is not technically equivalent to modern software patching processes, it contains many appropriate conotations. A patch is a quick fix to repair or to add new features to already existing code, supplied  to avoid a complete rewrite or more extensive process, and designed to easy for the end user to apply via a guided process. I also like the real world connotations of craft and physical repair of materials in a relatable way.  
+
+During this process of careful documentation I became concerned that over facilitation in this instructional way would remove the possibility for errors and thus reduce the opportunities for learning from resolving failure. However, while each stage of the process of adding game pattern was documented in as complete a fashion as possible, in practice mistakes were still made and additional customisations were made. Thus while the process did reduce dependency on my input as a facilitator there were still opportunities for me to support and resolve coding errors in person.
+
 
 
 #### GDPs used to nurture tactical responses to errors and blockages
